# rusty-ai

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
buddy/: buddy.toml  instructions.md
rusty_ai/: instructions.md  rusty_ai.toml
rusty_ai/files/: best-practice.md
src/: error.rs  main.rs
src/ais/: asst.rs  mod.rs  msg.rs
src/ais/asst/: mod.rs
src/buddy/: config.rs  mod.rs
src/rusty_ai/: mod.rs
src/utils/: cli.rs  files.rs  mod.rs
