[package]
name = "rusty-ai-buddy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# -- Async
tokio = { version = "1.35.1", features = ["full"] }
# -- AI
async-openai = "0.18.0"
# -- Macros for traits
derive_more = { version = "0.99.17", features = ["from", "display", "deref"] }
# -- Cli
console = "0.15.0"
# -- De/Serialize
serde = { version = "1.0.0", features = ["derive"] }
